# leenef

./: .gitignore  AGENTS.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
benchmarks/: colab_compare.py  colab_smoke.py  colab_suites.py  plot.py  run.py  run_capacity.py  run_continual.py  run_continual_rl.py  run_convnef_cl.py  run_ensemble_lunar.py  run_lunar_scaling.py  run_recurrent.py  run_rl.py  run_rls_lunar.py  run_sweep.py  run_target_modes.py  run_td_lambda.py  run_woodbury.py
docs/: analytical_target_propagation.md  colab.md  continual_learning_notes.md  generate_figures.py  rl_notes.md  technical_report.md
leenef/: __init__.py  activations.py  encoders.py  ensemble.py  layers.py  networks.py  recurrent.py  solvers.py
notebooks/: colab_launcher.ipynb
results/: dd_sweep.json
results/colab/: colab_smoke.json  continual_cl-quick.csv  continual_cl-quick.json  continual_cl.csv  continual_cl.json  conv_cifar-quick.csv  conv_cifar-quick.json  conv_cifar.csv  conv_cifar.json  conv_cifar_v2.csv  conv_cifar_v2.json  conv_cifar_v3.csv  conv_cifar_v3.json  conv_cifar_v4.csv  conv_cifar_v4.json  conv_cifar_v5.csv  conv_cifar_v5.json  conv_cifar_v6.csv  conv_cifar_v6.json  defaults_tp.csv  defaults_tp.json  recurrent_predictive.csv  recurrent_predictive.json  row_focus.csv  row_focus.json  sequential_audio.csv  sequential_audio.json  sequential_audio_v2.csv  sequential_audio_v2.json  sequential_hard.csv  sequential_hard.json
results/continual/: capacity_cifar10_results.json  capacity_mnist_results.json  capacity_results.json  continual_cifar100_results.json  continual_cifar10_results.json  continual_mnist_results.json  continual_results.json  woodbury_cifar10_results.json  woodbury_cifar10_split_alpha-sweep_results.json  woodbury_cifar10_split_float64_results.json  woodbury_mnist_permuted_alpha-sweep_results.json  woodbury_mnist_permuted_float64_results.json  woodbury_mnist_permuted_results.json  (+4 more)
src/leenef/: conv.py  (+9 more)
tests/: test_benchmarks.py  test_conv.py  test_core.py  test_ensemble.py  test_networks.py  test_recurrent.py  test_streaming.py
(+7 files in other folders)
