[project]
name = "leenef"
version = "0.1.0"
description = "Machine learning with the Neural Engineering Framework (Eliasmith & Anderson)"
requires-python = ">=3.12"
license = "MIT"
authors = [
    {name = "Nikša Bosnić", email = "nikeke@otpisani.net"},
]
dependencies = [
    "torch>=2.0",
    "torchvision>=0.15",
    "scikit-learn>=1.3",
]

[project.urls]
Repository = "https://github.com/nikeke/leenef"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.4",
]
bench = [
    "matplotlib>=3.8",
    "numpy>=1.26",
    "torchaudio>=2.0,<2.11",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["leenef", "benchmarks"]

[tool.setuptools.package-dir]
leenef = "src/leenef"

[tool.ruff]
line-length = 99
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E501"]

[tool.ruff.format]
quote-style = "double"
